# sat_sim

./: README.md
sat/: CMakeLists.txt
sat/src/: CMakeLists.txt  checksum.c  common.h  main.c  task_manager.c  task_manager.h  tc_decoder.c  tc_decoder.h  tm_encoder.c  tm_encoder.h
sat/src/include/static/: checksum.h
sat/tests/: CMakeLists.txt  test_checksum.c
sim/: .gitignore  sim.py  structures.py
